racket/src/crypto/rktcrypto.h

/*************************************************/
/* System entropy                                */

RKTCRYPTO_EXTERN_NOERR int rktcrypto_system_random(unsigned char *buf, intptr_t start, intptr_t end);
/* Fills `buf[start..end)` with cryptographically secure random bytes
   from the operating system (getentropy, getrandom, BCryptGenRandom,
   or /dev/urandom as a last resort). Returns 1 on success, 0 on
   failure; on failure, the buffer contents are unspecified and must
   not be used. */

RKTCRYPTO_EXTERN_NOERR int rktcrypto_random_bytes(unsigned char *buf, intptr_t start, intptr_t end);
/* Like rktcrypto_system_random, but served from a per-thread ChaCha20
   generator seeded from the OS: much faster for frequent small
   requests, forward-secret (each request re-keys), and reseeded after
   fork() so a parent and child never share state. This is the default
   source for `crypto-random-bytes`. Returns 1 on success, 0 on a
   seeding failure. */

/*************************************************/
/* Constant-time utilities                       */

RKTCRYPTO_EXTERN_NOERR int rktcrypto_ct_bytes_equal(const unsigned char *a, intptr_t a_start, const unsigned char *b, intptr_t b_start, intptr_t len);
/* Bytes needed to hold a context for `alg`, or 0 if `alg` is unknown. */

RKTCRYPTO_EXTERN_NOERR intptr_t rktcrypto_digest_size(int alg);
/* Write out_len output bytes to out[out_start..]. For fixed-size
   hashes out_len must equal the digest size; for SHAKE it may be any
   length. Returns 1 on success, 0 on bad arguments. */

RKTCRYPTO_EXTERN_NOERR int rktcrypto_digest_oneshot(int alg,
                                                    const unsigned char *data, intptr_t start, intptr_t end,
                                                    unsigned char *out, intptr_t out_start, intptr_t out_len);
RKTCRYPTO_EXTERN_NOERR intptr_t rktcrypto_aead_key_size(int alg);
/* Key size in bytes, or -1 if `alg` is unknown. */

RKTCRYPTO_EXTERN_NOERR intptr_t rktcrypto_aead_nonce_size(int alg);
/* Nonce size in bytes, or -1 if `alg` is unknown. */

RKTCRYPTO_EXTERN_NOERR intptr_t rktcrypto_aead_tag_size(int alg);
/* Authentication tag size in bytes, or -1 if `alg` is unknown. */

RKTCRYPTO_EXTERN_NOERR int rktcrypto_aead_seal(int alg,
                                               const unsigned char *key, intptr_t key_len,
                                               const unsigned char *nonce, intptr_t nonce_len,
                                               const unsigned char *aad, intptr_t aad_start, intptr_t aad_end,
                                               const unsigned char *pt, intptr_t pt_start, intptr_t pt_end,
                                               unsigned char *out, intptr_t out_start);
/* Encrypts and authenticates; writes ciphertext followed by the tag
   to out[out_start..]. `out` must hold (pt_len + tag_size) bytes.
   Returns 1 on success, 0 on bad algorithm/key/nonce size. */

RKTCRYPTO_EXTERN_NOERR int rktcrypto_aead_open(int alg,
                                               const unsigned char *key, intptr_t key_len,
                                               const unsigned char *nonce, intptr_t nonce_len,
                                               const unsigned char *aad, intptr_t aad_start, intptr_t aad_end,
                                               const unsigned char *ct, intptr_t ct_start, intptr_t ct_end,
                                               unsigned char *out, intptr_t out_start);
/* scrypt (RFC 7914). N must be a power of two > 1; r, p > 0. Allocates
   128*r*(N+p) bytes. Returns 1 on success, 0 on invalid parameters or
   allocation failure. */

/*************************************************/
/* HMAC, HKDF, and misc KDFs over the digests    */

RKTCRYPTO_EXTERN_NOERR void rktcrypto_hmac(int alg, const unsigned char *key, intptr_t keylen,
                                           const unsigned char *msg, intptr_t msglen, unsigned char *out);
/* One-shot HMAC-<alg>; out receives digest_size(alg) bytes. */

RKTCRYPTO_EXTERN_NOERR void rktcrypto_hkdf_extract(int alg, const unsigned char *ikm, intptr_t ikmlen,
                                                   const unsigned char *salt, intptr_t saltlen, unsigned char *prk);
RKTCRYPTO_EXTERN_NOERR int rktcrypto_hkdf_expand(int alg, const unsigned char *prk, intptr_t prklen,
                                                 const unsigned char *info, intptr_t infolen,
                                                 unsigned char *out, intptr_t outlen);
/* HKDF (RFC 5869). Expand returns 0 if outlen > 255*digest_size. */

RKTCRYPTO_EXTERN_NOERR int rktcrypto_tls13_expand_label(int alg, const unsigned char *secret, intptr_t secretlen,
                                                        const unsigned char *label, intptr_t labellen,
                                                        const unsigned char *context, intptr_t contextlen,
                                                        unsigned char *out, intptr_t outlen);
/* Transcript-Hash(messages) = Hash(msgs[start..end)). */

RKTCRYPTO_EXTERN_NOERR void rktcrypto_tls13_extract(int alg, const unsigned char *salt, intptr_t saltlen,
                                                    const unsigned char *ikm, intptr_t ikmlen, unsigned char *prk);
/* HKDF-Extract in TLS order (salt = prior secret, ikm = PSK/(EC)DHE); a NULL
   salt or ikm means Hash.length zero bytes. */

RKTCRYPTO_EXTERN_NOERR int rktcrypto_tls13_derive_secret(int alg, const unsigned char *secret,
                                                         const unsigned char *label, intptr_t llen,
                                                         const unsigned char *thash, unsigned char *out);
/* Derive-Secret(Secret, Label, Messages); thash = Transcript-Hash(Messages). */

RKTCRYPTO_EXTERN_NOERR int rktcrypto_tls13_traffic_keys(int alg, const unsigned char *secret,
                                                        unsigned char *key, intptr_t key_len,
                                                        unsigned char *iv, intptr_t iv_len);
/* key = Expand-Label(secret,"key",...); iv = Expand-Label(secret,"iv",...). */

RKTCRYPTO_EXTERN_NOERR int rktcrypto_tls13_finished_key(int alg, const unsigned char *base_key, unsigned char *out);
RKTCRYPTO_EXTERN_NOERR void rktcrypto_tls13_verify_data(int alg, const unsigned char *finished_key,
                                                        const unsigned char *thash, unsigned char *out);
/* Per-record nonce = static IV XOR left-padded 64-bit sequence number. */

RKTCRYPTO_EXTERN_NOERR intptr_t rktcrypto_tls13_record_seal(int aead, const unsigned char *key, intptr_t key_len,
                                                            const unsigned char *iv, intptr_t iv_len, uint64_t seq,
                                                            const unsigned char *inner, intptr_t inner_len,
                                                            unsigned char *out);
RKTCRYPTO_EXTERN_NOERR intptr_t rktcrypto_tls13_record_open(int aead, const unsigned char *key, intptr_t key_len,
                                                            const unsigned char *iv, intptr_t iv_len, uint64_t seq,
                                                            const unsigned char *rec, intptr_t rec_len,
                                                            unsigned char *out);
/* AEAD-protect / recover one TLSCiphertext record (5-byte header AAD, trailing
   content-type in the inner plaintext). seal returns record length or 0; open
   returns inner-plaintext length or -1 on auth failure. */

RKTCRYPTO_EXTERN_NOERR int rktcrypto_tls13_selftest(void);
/* Returns 0 if the RFC 8448 key-schedule vectors and a record round-trip all
   pass, else a nonzero step index. */

/*************************************************/
/* X25519 key exchange (RFC 7748)                */

RKTCRYPTO_EXTERN_NOERR int rktcrypto_x25519(unsigned char *out,
                                            const unsigned char *scalar,
                                            const unsigned char *point);
/* Verifies a 114-byte Ed448 signature. Returns 1 if valid, 0 otherwise. */

/*************************************************/
/* Ed25519 signatures (RFC 8032)                 */

RKTCRYPTO_EXTERN_NOERR int rktcrypto_ed25519_pubkey(unsigned char *pk, const unsigned char *seed);
/* Derives the 32-byte public key from a 32-byte seed (private key). */

RKTCRYPTO_EXTERN_NOERR int rktcrypto_ed25519_sign(unsigned char *sig,
                                                  const unsigned char *msg, intptr_t msglen,
                                                  const unsigned char *seed);
/* Signs msg[0..msglen) with the 32-byte seed, writing a 64-byte
   signature to sig. Constant-time in the secret. Returns 1. */

RKTCRYPTO_EXTERN_NOERR int rktcrypto_ed25519_verify(const unsigned char *sig,
                                                    const unsigned char *msg, intptr_t msglen,
                                                    const unsigned char *pk);
/* Verifies a 64-byte signature over msg under the 32-byte public key.
   Returns 1 if valid, 0 otherwise. */

/*************************************************/
/* NIST P-256 (secp256r1)                        */

RKTCRYPTO_EXTERN_NOERR int rktcrypto_p256_pubkey(unsigned char *out65, const unsigned char *priv);
/* Public key (65-byte uncompressed 0x04||x||y) from a 32-byte private
   scalar. Returns 1, or 0 for a degenerate key. */

RKTCRYPTO_EXTERN_NOERR int rktcrypto_p256_ecdh(unsigned char *out, const unsigned char *scalar,
                                               const unsigned char *point65);
/* ECDH: writes the 32-byte x-coordinate of scalar*point to out.
   Returns 1, or 0 on a bad point or point at infinity. */

RKTCRYPTO_EXTERN_NOERR int rktcrypto_p256_ecdsa_sign(unsigned char *sig,
                                                     const unsigned char *msg, intptr_t msglen,
                                                     const unsigned char *priv);
/* ECDSA-with-SHA-256: writes a 64-byte r||s signature. Uses a random
   nonce from the built-in CSPRNG. Returns 1, or 0 on failure. */

RKTCRYPTO_EXTERN_NOERR int rktcrypto_p256_ecdsa_verify(const unsigned char *sig,
                                                       const unsigned char *msg, intptr_t msglen,
                                                       const unsigned char *pub65);
/* Verifies a 64-byte ECDSA signature. Returns 1 if valid, 0 otherwise. */

/*************************************************/
/* NIST P-384 (secp384r1) and P-521 (secp521r1)  */
/* Uncompressed points 0x04||x||y; ECDSA uses SHA-384 (P-384) / SHA-512
   (P-521). priv/coord widths: P-384 = 48 bytes, P-521 = 66 bytes. */
RKTCRYPTO_EXTERN_NOERR int rktcrypto_p384_pubkey(unsigned char *out97, const unsigned char *priv);
RKTCRYPTO_EXTERN_NOERR int rktcrypto_p384_ecdh(unsigned char *out48, const unsigned char *scalar, const unsigned char *point97);
RKTCRYPTO_EXTERN_NOERR int rktcrypto_p384_ecdsa_sign(unsigned char *sig96, const unsigned char *msg, intptr_t msglen, const unsigned char *priv);
RKTCRYPTO_EXTERN_NOERR int rktcrypto_p384_ecdsa_verify(const unsigned char *sig96, const unsigned char *msg, intptr_t msglen, const unsigned char *pub97);
RKTCRYPTO_EXTERN_NOERR int rktcrypto_p521_ecdsa_sign(unsigned char *sig132, const unsigned char *msg, intptr_t msglen, const unsigned char *priv);
RKTCRYPTO_EXTERN_NOERR int rktcrypto_p521_ecdsa_verify(const unsigned char *sig132, const unsigned char *msg, intptr_t msglen, const unsigned char *pub133);
/* SLH-DSA-SHAKE-128s (pure mode, empty context). keygen_derand takes 48
   seed bytes (SK.seed||SK.prf||PK.seed). Deterministic signing. */

/*************************************************/
/* PEM / DER / X.509 parsing                     */

RKTCRYPTO_EXTERN_NOERR intptr_t rktcrypto_base64_decode(const unsigned char *in, intptr_t inlen, unsigned char *out);